# timmy

./: .git-nest  .gitignore  .gitlab-ci.yml  .ocamlformat  CHANGELOG.md  Makefile  README.md  TODO  cross.flags  doc-publish  dune  dune-project  dune-workspace  dune-workspace.no-schematic  dune.extdeps.inc  dune.inc  id_rsa.pub  index.html  index.mld  package.json  shell.nix  timmy-js.opam  timmy-jsoo.opam  timmy-jsoo.opam.extdeps  timmy-jsoo.opam.template  timmy-lwt.opam  timmy-lwt.opam.extdeps  timmy-timezones.opam  timmy-unix.opam  timmy-unix.opam.extdeps  timmy.opam  timmy.opam.extdeps  timmy.opam.template
.githooks/pre-commit/: versioning
.github/workflows/: ci.yml
.logistic/: .gitignore  .ocamlformat  Makefile  README.md  dune-workspace  dune.inc  id_rsa  shell.nix
.logistic/ci/: .gitlab-ci-template.yml  .gitlab-ci.yml  Dockerfile.ci  Dockerfile.ci.alpine  Dockerfile.ci.ubuntu  Makefile  builders-scale  opam-publish
.logistic/claude/: OCAML_MCP_SETUP.md
.logistic/docker-ci-builder/: Dockerfile
.logistic/nix/: README.md  ci-packages.nix  envrc  envrc-shallow  flake.nix  shell.nix  sources.json
.logistic/overlord/: Makefile  default
ci/: .gitlab-ci-bs-latest.yml  .gitlab-ci-latest.yml  .gitlab-ci-template.yml  .gitlab-ci.yml  Dockerfile  Dockerfile.ci  Dockerfile.ci.alpine  Dockerfile.ci.ubuntu  Makefile  Makefile.rej  builders-scale  opam-publish
ci/dune/: .gitlab-ci-template.yml  .gitlab-ci.yml  Makefile  dune  dune-project  dune_sak.ml  opam-publish
claude/: CLAUDE.md
dev-tools.locks/ocaml-lsp-server/: chrome-trace.pkg  dune-rpc.pkg  dyn.pkg  jsonrpc.pkg  lock.dune  lsp.pkg  ocaml-lsp-server.pkg  ocamlc-loc.pkg  ocamlformat-rpc-lib.pkg  pp.pkg  spawn.pkg  stdune.pkg  uutf.pkg
dev-tools.locks/ocamlformat/: fpath.pkg  lock.dune  ocamlformat-lib.pkg  ocamlformat.pkg
docker-ci-builder/: Dockerfile
docker/dune-builder/: dune-config
docker/opam-builder/: Dockerfile
dune.lock/: alcotest-lwt.1.9.0.pkg  alcotest-lwt.pkg  alcotest.1.9.0.pkg  alcotest.1.9.1.pkg  arch-x86_64.1.pkg  base.v0.17.2.pkg  base64.3.5.1.pkg  bigstringaf.0.10.0.pkg  bytesrw.0.3.0.pkg  cmdliner.1.3.0.pkg  cmdliner.2.1.0.pkg  cmdliner.2.1.1.pkg  compiler-cloning.enabled.pkg  conf-binaryen.1.pkg  conf-mingw-w64-gcc-i686.1.pkg  conf-mingw-w64-gcc-x86_64.1.pkg  conf-npm.1.pkg  conf-pkg-config.5.pkg  conf-tzdata.1.pkg  cstruct.6.2.0.pkg  dune-configurator.3.19.0.pkg  dune-configurator.3.20.2.pkg  dune-configurator.pkg  ezjsonm.pkg  flexdll.0.44.pkg  fmt.0.10.0.pkg  fmt.0.11.0.pkg  fmt.pkg  gen.1.1.pkg  hex.pkg  hlist.0.2.2.pkg  hlist.pkg  hmap.0.8.1.pkg  hmap.pkg  js_of_ocaml-compiler.6.0.1.pkg  js_of_ocaml-compiler.6.1.1.pkg  js_of_ocaml-compiler.6.3.2.pkg  js_of_ocaml-compiler.6.4.1.pkg  js_of_ocaml-compiler.pkg  js_of_ocaml-ppx.6.0.1.pkg  (+80 more)
dune/extdeps/: dune  extdeps.ml
dune/opam-pins/: opam_pins.ml
lib/: dune
lib/src/: date.ml  date.mli  date_intf.ml  daytime.mli  span.ml  span.mli  span_intf.ml  time.ml  time_intf.ml  timezone.mli  timmy.ml  weekday.ml
nix/: README.md  envrc-full  flake.nix  full-nix-shell.nix  shared.nix  shell.nix  sources.json
no-schematic.lock/: alcotest-lwt.1.9.1.pkg  base.pkg  conf-npm.1.pkg  conf-npm.pkg  conf-tzdata.pkg  cstruct.6.2.0.pkg  dune-configurator.pkg  js_of_ocaml-compiler.6.2.0.pkg  js_of_ocaml-ppx.6.2.0.pkg  js_of_ocaml-ppx.6.3.2.pkg  js_of_ocaml.6.3.2.pkg  lock.dune  lwt.6.1.0.pkg  merlin-lib.5.6-504.pkg  merlin-lib.5.7.0-504.pkg  ocaml-base-compiler.5.4.0.pkg  ocaml-index.5.6.1-504.pkg  ocaml-index.5.7.0-504.pkg  ocaml.5.5.0.pkg  opam-file-format.2.2.0.pkg  ppxlib.0.37.0.pkg  re.1.14.0.pkg  sedlex.3.7.pkg  timedesc-tzlocal.3.1.2.pkg  yojson.3.0.0.pkg
opam/: dune  timmy-android.opam  timmy-ios.opam  timmy-jsoo-android.opam  timmy-jsoo-ios.opam  timmy-jsoo-macos.opam  timmy-jsoo-windows.opam  timmy-jsoo.opam.extdeps  timmy-lwt-android.opam  timmy-lwt-ios.opam  timmy-lwt-macos.opam  timmy-lwt-windows.opam  timmy-lwt.opam.extdeps  timmy-macos.opam  timmy-timezones-android.opam  timmy-timezones-ios.opam  timmy-timezones-macos.opam  timmy-timezones-windows.opam  timmy-timezones.opam.extdeps  timmy-unix-android.opam  timmy-unix-ios.opam  timmy-unix-macos.opam  timmy-unix-windows.opam  timmy-unix.opam.extdeps  timmy-windows.opam  timmy.opam.extdeps
overlord/: Makefile  daemon.json  routine.tf  terraform.tfstate
overlord/ca/: ca-key.pem  ca.csr  ca.pem  ca.srl
tests/: dune  test.ml
timmy/: index.html
timmy-js/tests/: dune  test.ts
timmy-jsoo/: dune  index.html
timmy-jsoo/Timmy_jsoo/: index.html
timmy-jsoo/clock/: clock.ml  dune
timmy-jsoo/doc/: dune  index.mld
timmy-jsoo/lib/: dune  js_decode.disabled.ml  js_decode.enabled.ml
timmy-jsoo/lib/src/: date.ml  date.mli  daytime.ml  time.ml  time.mli  timezone.ml  timezone.mli  timmy_jsoo.ml  versions.ml  week.ml
timmy-jsoo/tests/: dune  test-js  test.mjs  test.ml  test.ts
timmy-lwt/: index.html
timmy-lwt/Timmy_lwt/: index.html
timmy-lwt/Timmy_lwt_platform/: index.html
timmy-lwt/Timmy_lwt_virtual/: index.html
timmy-lwt/lib/: dune
timmy-lwt/platform/: dune  timmy_lwt_platform.mli
timmy-lwt/tests/: dune  engine_virtual.ml  ticker.ml
timmy-lwt/virtual/: dune
timmy-timezones/: index.html
timmy-timezones/Timmy_timezones/: index.html
timmy-timezones/lib/: dune  timmy_timezones.ml  timmy_timezones.mli
timmy-timezones/tests/: dune  (+1 more)
timmy-unix/: index.html
timmy-unix/clock/: clock.ml  dune  generate_windows_timezones.ml  timezone.c  timezone.cc  windowsZones.ml  windows_timezones.ml
timmy-unix/tests/: dune  test.ml
timmy/lib/: dune  type.js.ml  type.noschematic.ml  type.schematic.ml  type_js.js.ml  type_js.nojs.ml  type_schema.noschematic.ml  type_schema.schematic.ml
timmy/lib/src/: date.ml  date.mli  date_intf.ml  daytime.ml  daytime.mli  month.ml  month.mli  month_intf.ml  span.ml  span.mli  span_intf.ml  time.ml  time.mli  time_intf.ml  timezone.ml  timezone.mli  timmy.ml  types_bare.ml  versions.ml  week.ml  week.mli  weekday.ml  weekday.mli  weekday_intf.ml
timmy/tests/: clock_tests.ml  dune  schemas.schematic.ml  test.ml  testable.ml
(+151 files in other folders)
