; Timmy-js won't build on OCaml-CI as schematic is not available.

(dirs dune.lock opam timmy timmy-clock timmy-jsoo timmy-lwt timmy-unix
 .logistic)

(env
 (dev
  (flags
   (:standard -warn-error -A))))

(alias
 (name default)
 (deps
  timmy.opam
  timmy-jsoo.opam
  timmy-lwt.opam
  timmy-unix.opam
  opam/timmy-jsoo-macos.opam
  opam/timmy-jsoo-windows.opam
  opam/timmy-lwt-macos.opam
  opam/timmy-lwt-windows.opam
  opam/timmy-macos.opam
  opam/timmy-unix-macos.opam
  opam/timmy-unix-windows.opam
  opam/timmy-windows.opam
  (alias_rec timmy/default)
  (alias_rec timmy-jsoo/default)
  (alias_rec timmy-lwt/default)
  (alias_rec timmy-unix/default)))

(rule
 (target dune.inc)
 (alias extdeps)
 (mode (promote))
 (action
  (with-stdout-to
   %{target}
   (run
    %{dep:.logistic/dune/extdeps/extdeps.exe}
    generate
    --cross
    base,fmt,lwt,ptime
    --cross-both
    ; FIXME: dune need the native timmy to be install to be able to
    ; reimplement clock. Remove when dune is fixed.
    timmy,ppx_here,ppx_deriving
    --cross-exclude
    js_of_ocaml
    --local
    hlist,schematic,schematic-jsoo))))

(include dune.inc)
