(dirs :standard .logistic)

(env
 (dev
  (flags
   (:standard -warn-error -A))))

(alias
 (name default)
 (deps
  timmy.opam
  timmy-jsoo.opam
  timmy-lwt.opam
  timmy-unix.opam
  timmy-timezones.opam
  opam/timmy-lwt-android.opam
  opam/timmy-lwt-android.opam
  opam/timmy-lwt-macos.opam
  opam/timmy-lwt-ios.opam
  opam/timmy-lwt-windows.opam
  opam/timmy-android.opam
  opam/timmy-macos.opam
  opam/timmy-ios.opam
  opam/timmy-timezones-android.opam
  opam/timmy-timezones-macos.opam
  opam/timmy-timezones-ios.opam
  opam/timmy-timezones-windows.opam
  opam/timmy-unix-android.opam
  opam/timmy-unix-macos.opam
  opam/timmy-unix-ios.opam
  opam/timmy-unix-windows.opam
  opam/timmy-windows.opam
  (alias_rec timmy/default)
  (alias_rec timmy-jsoo/default)
  (alias_rec timmy-lwt/default)
  (alias_rec timmy-timezones/default)
  (alias_rec timmy-unix/default)))

(rule
 (target dune.inc)
 (alias extdeps)
 (mode (promote))
 (action
  (with-stdout-to
   %{target}
   (run
    %{dep:.logistic/dune/extdeps/extdeps.exe}
    generate
    --cross
    base,fmt,lwt,ptime,timedesc,logs
    --cross-both
    ; FIXME: dune need the native timmy to be install to be able to
    ; reimplement clock. Remove when dune is fixed.
    timmy,ppx_here,ppx_deriving
    --local
    hlist,schematic))))

(include dune.inc)
