(include .logistic/dune.inc)

(rule
 (target timmy.opam.template)
 (enabled_if
  (and
   %{lib-available:cmdliner}
   %{lib-available:sexplib}
   %{lib-available:stdio}))
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{target}
   (run %{dep:.logistic/dune/opam-pins/opam_pins.exe} %{dep:dune-project}))))
