opam-version: "2.0"
version: "1.2.0"
synopsis: "Js_of_ocaml bindings for Timmy"
maintainer: ["mefyl <mefyl@gruntech.org>"]
authors: ["mefyl <mefyl@gruntech.org>"]
license: "LGPL-3.0-or-later"
homepage: "https://github.com/mefyl/timmy"
bug-reports: "https://github.com/mefyl/timmy/issues"
depends: [
  "dune" {>= "3.20"}
  "ptime-android"
  "ppx_here"
  "ppx_here-android"
  "fmt-android"
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "timmy" {= version}
  "timmy-android" {= version}
]
depopts: ["schematic-jsoo-android"]
conflicts: [
  "schematic-jsoo" {< "0.18.2" | >= "0.22.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-x" "android" "-p" "timmy-jsoo" "-j" jobs "@install"]
]
dev-repo: "git+https://github.com/mefyl/timmy.git"
x-maintenance-intent: ["(latest)"]
