opam-version: "2.0"
version: "1.1.4"
synopsis: "Js_of_ocaml bindings for Timmy"
maintainer: ["mefyl <mefyl@gruntech.org>"]
authors: ["mefyl <mefyl@gruntech.org>"]
license: "LGPL-3.0-or-later"
homepage: "https://github.com/mefyl/timmy"
bug-reports: "https://github.com/mefyl/timmy/issues"
depends: [
  "dune" {>= "3.0"}
  "fmt-windows"
  "js_of_ocaml-ppx"
  "timmy" {= version}
  "timmy-windows" {= version}
]
depopts: ["schematic-jsoo-windows"]
conflicts: [
  "schematic-jsoo" {< "0.18.2" | >= "0.21.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-x" "windows" "-p" "timmy-jsoo" "-j" jobs "@install"]
]
dev-repo: "git+https://github.com/mefyl/timmy.git"
pin-depends: [
  [
    "landmarks.1.4"
    "git+https://github.com/LexiFi/landmarks.git#b0c753cd2a4c4aa00dffdd3be187d8ed592fabf7"
  ]
  [
    "landmarks-ppx.1.4"
    "git+https://github.com/LexiFi/landmarks.git#b0c753cd2a4c4aa00dffdd3be187d8ed592fabf7"
  ]
]
