opam-version: "2.0"
version: "1.1.3"
synopsis: "Lwt utilities based on Timmy"
maintainer: ["mefyl <mefyl@gruntech.org>"]
authors: ["mefyl <mefyl@gruntech.org>"]
license: "LGPL-3.0-or-later"
homepage: "https://github.com/mefyl/timmy"
bug-reports: "https://github.com/mefyl/timmy/issues"
depends: [
  "dune" {>= "3.11"}
  "logs" {>= "0.7.0"}
  "lwt-windows"
  "timmy" {= version}
  "timmy-windows" {= version}
]
depopts: ["js_of_ocaml-lwt"]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-x"
    "windows"
    "-p"
    "timmy-lwt"
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
dev-repo: "git+https://github.com/mefyl/timmy.git"
