opam-version: "2.0"
version: "1.1.6"
synopsis: "Timezone database support for Timmy"
maintainer: ["mefyl <mefyl@gruntech.org>"]
authors: ["mefyl <mefyl@gruntech.org>"]
license: "LGPL-3.0-or-later"
homepage: "https://github.com/mefyl/timmy"
bug-reports: "https://github.com/mefyl/timmy/issues"
depends: [
  "dune" {>= "3.0"}
  "timedesc-ios" {>= "3.0"}
  "ppx_here"
  "ppx_here-ios"
  "ppx_deriving" {>= "5.0"}
  "ppx_deriving-ios" {>= "5.0"}
  "logs-ios" {>= "0.7.0"}
  "timmy" {= version}
  "timmy-ios" {= version}
]
depopts: ["js_of_ocaml-lwt"]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-x" "ios" "-p" "timmy-timezones" "-j" jobs "@install"]
]
dev-repo: "git+https://github.com/mefyl/timmy.git"
