opam-version: "2.0"
version: "1.2.0"
synopsis: "Timezone database support for Timmy"
maintainer: ["mefyl <mefyl@gruntech.org>"]
authors: ["mefyl <mefyl@gruntech.org>"]
license: "LGPL-3.0-or-later"
homepage: "https://github.com/mefyl/timmy"
bug-reports: "https://github.com/mefyl/timmy/issues"
depends: [
  "dune" {>= "3.20"}
  "timedesc-macos" {>= "3.0"}
  "ppx_here"
  "ppx_here-macos"
  "ppx_deriving" {>= "5.0"}
  "ppx_deriving-macos" {>= "5.0"}
  "logs-macos" {>= "0.7.0"}
  "timmy" {= version}
  "timmy-macos" {= version}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-x" "macos" "-p" "timmy-timezones" "-j" jobs "@install"]
]
dev-repo: "git+https://github.com/mefyl/timmy.git"
x-maintenance-intent: ["(latest)"]
