opam-version: "2.0"
version: "1.1.9"
synopsis: "Timezone database support for Timmy"
maintainer: ["mefyl <mefyl@gruntech.org>"]
authors: ["mefyl <mefyl@gruntech.org>"]
license: "LGPL-3.0-or-later"
homepage: "https://github.com/mefyl/timmy"
bug-reports: "https://github.com/mefyl/timmy/issues"
depends: [
  "dune" {>= "3.20"}
  "timedesc-windows" {>= "3.0"}
  "ppx_here"
  "ppx_here-windows"
  "ppx_deriving" {>= "5.0"}
  "ppx_deriving-windows" {>= "5.0"}
  "logs-windows" {>= "0.7.0"}
  "timmy" {= version}
  "timmy-windows" {= version}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-x" "windows" "-p" "timmy-timezones" "-j" jobs "@install"]
]
dev-repo: "git+https://github.com/mefyl/timmy.git"
x-maintenance-intent: ["(latest)"]
