opam-version: "2.0"
version: "1.1.8"
synopsis: "Unix clock implementation for Timmy"
maintainer: ["mefyl <mefyl@gruntech.org>"]
authors: ["mefyl <mefyl@gruntech.org>"]
license: "LGPL-3.0-or-later"
homepage: "https://github.com/mefyl/timmy"
bug-reports: "https://github.com/mefyl/timmy/issues"
depends: [
  "dune" {>= "3.0"}
  "ptime-windows"
  "base-windows"
  "fmt-windows"
  "logs-windows" {>= "0.7.0"}
  "timmy" {= version}
  "timmy-windows" {= version}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-x" "windows" "-p" "timmy-unix" "-j" jobs "@install"]
]
dev-repo: "git+https://github.com/mefyl/timmy.git"
