opam-version: "2.0"
version: "1.1.5"
synopsis: "Time and calendar library"
maintainer: ["mefyl <mefyl@gruntech.org>"]
authors: ["mefyl <mefyl@gruntech.org>"]
license: "LGPL-3.0-or-later"
homepage: "https://github.com/mefyl/timmy"
bug-reports: "https://github.com/mefyl/timmy/issues"
depends: [
  "dune" {>= "3.0"}
  "base-windows"
  "fmt-windows" {>= "0.8.7"}
  "ocaml-windows" {>= "4.08.0"}
  "ppx_here"
  "ppx_here-windows"
  "ppx_deriving" {>= "5.0"}
  "ppx_deriving-windows" {>= "5.0"}
  "ptime-windows"
  "cmdliner" {with-dev-setup | with-test}
  "ocamlformat" {= "0.26.2" & (with-dev-setup | with-test)}
  "opam-file-format" {with-dev-setup | with-test}
  "sexplib" {with-dev-setup | with-test}
  "stdio" {with-dev-setup | with-test}
]
depopts: ["schematic-windows"]
conflicts: [
  "schematic" {< "0.18.2" | >= "0.21.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-x" "windows" "-p" "timmy" "-j" jobs "@install"]
]
dev-repo: "git+https://github.com/mefyl/timmy.git"
